--- a/Responsivewebpage/index.html
+++ b/Responsivewebpage/index.html
@@ -8,12 +8,16 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/a34e97c4a7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobile_style.css">
 </head>
 <body>
     <header>
         <div class="container-fluid p-0">
             <nav class="navbar navbar-expand-lg ">
-                <a class="navbar-brand" href="#">Books</a>
+                
+                <a class="navbar-brand" href="#">
+                    <i class="fas fa-book-reader fa-3x mx-3"></i>
+                    Books</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -76,11 +80,11 @@
                         <div class="panel text-left">
                             <h1>Miss.Sandushi Rathnayaka</h1>
                             <p class="pt-4">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                  
                             </p>
                             <P>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
                                 Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                             </P>
                         </div>
@@ -194,7 +198,7 @@
                             <i class="fa-solid fa-mobile-screen-button fa-3x py-2 pr-3"></i>
                             <div class="text text-left">
                                 <h3 clss="pt-1 m-0" >Mobile</h3>
-                                <p class="p-0 m-0">On Website</p>
+                                <p class="p-0 m-0">On Playstore</p>
                             </div>
                         </div>
                     </div>
@@ -202,7 +206,7 @@
             </div>
         </section>
         <section class="section-4 ">
-            <div class="containet text-center">
+            <div class="container text-center">
                 <h1 class="text-dark">What Our Reader's Say About Us</h1>
                 <p class="text-secondary">Lorem ipsum dolor sit amet</p>
             </div>
@@ -210,7 +214,7 @@
                 <div class="col-md-4 col-12 text-center">
                     <div class="card mr-2 d-inline-block shadow-lg">
                         <div class="card-img-top">
-                            <img src="images/UI-face-3.jpg" alt="img1" class="img-fluid">
+                            <img src="images/UI-face-3.jpg" alt="img1" class="img-fluid border-radius  p-4">
                         </div>
                         <div class="card-body">
                             <h3 class="card-title">Sineth Pramuditha</h3>
@@ -231,7 +235,7 @@
                             <div class="carousel-item active text-center">
                                 <div class="card mr-2 d-inline-block shadow-lg">
                                     <div class="card-img-top">
-                                        <img src="images/UI-face-1.jpg" alt="img1" class="img-fluid">
+                                        <img src="images/UI-face-1.jpg" alt="img1" class="img-fluid border-radius p-4">
                                     </div>
                                     <div class="card-body">
                                         <h3 class="card-title">Allen Agnes</h3>
@@ -249,7 +253,7 @@
                             <div class="carousel-item text-center">
                                 <div class="card mr-2 d-inline-block shadow-lg">
                                     <div class="card-img-top">
-                                        <img src="images/UI-face-3.jpg" alt="img1" class="img-fluid">
+                                        <img src="images/testimonial 1.jpg" alt="img1" class="img-fluid border-radius p-4">
                                     </div>
                                     <div class="card-body">
                                         <h3 class="card-title">Manjitha Jayasanka</h3>
@@ -271,7 +275,7 @@
                 <div class="col-md-4 col-12 text-center">
                     <div class="card mr-2 d-inline-block shadow-lg">
                         <div class="card-img-top">
-                            <img src="images/testimonial 2.jpg" alt="img1" class="img-fluid">
+                            <img src="images/testimonial 2.jpg" alt="img1" class="img-fluid border-radius p-4">
                         </div>
                         <div class="card-body">
                             <h3 class="card-title">Olivia Louis</h3>
